WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
104989
Refactoring: Fix indentation of ChromeClient.h
https://bugs.webkit.org/show_bug.cgi?id=104989
Summary
Refactoring: Fix indentation of ChromeClient.h
Kent Tamura
Reported
2012-12-13 20:51:33 PST
Refactoring: Fix indentation of ChromeClient.h
Attachments
Patch
(29.03 KB, patch)
2012-12-13 20:55 PST
,
Kent Tamura
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kent Tamura
Comment 1
2012-12-13 20:55:00 PST
Created
attachment 179409
[details]
Patch
Kentaro Hara
Comment 2
2012-12-13 21:09:02 PST
Comment on
attachment 179409
[details]
Patch (I thought we don't want to accept style-only-fix changes that might mess up git histories, but I couldn't find the policy in the latest WebKit guidelines.)
Kent Tamura
Comment 3
2012-12-13 21:14:24 PST
(In reply to
comment #2
)
> (I thought we don't want to accept style-only-fix changes that might mess up git histories, but I couldn't find the policy in the latest WebKit guidelines.)
I haven't heard such policy.
WebKit Review Bot
Comment 4
2012-12-13 21:44:06 PST
Comment on
attachment 179409
[details]
Patch Clearing flags on attachment: 179409 Committed
r137713
: <
http://trac.webkit.org/changeset/137713
>
WebKit Review Bot
Comment 5
2012-12-13 21:44:09 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug