Refactoring: Fix indentation of ChromeClient.h https://bugs.webkit.org/show_bug.cgi?id=104989

Reviewed by Kentaro Hara.

The contents of an outermost namespace block should not be indented.
http://www.webkit.org/coding/coding-style.html#indentation-namespace

No behavior change.

* page/ChromeClient.h:


Canonical link: https://commits.webkit.org/123234@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137713 268f45cc-cd09-0410-ab3c-d52691b4dbfc